@@ -1,5 +1,14 @@
 package org.enso.table.data.table;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.BitSet;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import org.enso.base.Text_Utils;
 import org.enso.base.text.TextFoldingStrategy;
 import org.enso.table.aggregations.Aggregator;
@@ -9,38 +18,27 @@ import org.enso.table.data.column.builder.StringBuilder;
 import org.enso.table.data.column.storage.BoolStorage;
 import org.enso.table.data.column.storage.Storage;
 import org.enso.table.data.column.storage.type.TextType;
-import org.enso.table.data.index.DefaultIndex;
-import org.enso.table.data.index.Index;
 import org.enso.table.data.index.CrossTabIndex;
 import org.enso.table.data.index.MultiValueIndex;
+import org.enso.table.data.index.MultiValueKeyBase;
+import org.enso.table.data.index.OrderedMultiValueKey;
 import org.enso.table.data.mask.OrderMask;
 import org.enso.table.data.mask.SliceRange;
 import org.enso.table.data.table.join.CrossJoin;
-import org.enso.table.data.table.join.IndexJoin;
-import org.enso.table.data.table.join.JoinCondition;
+import org.enso.table.data.table.join.JoinKind;
 import org.enso.table.data.table.join.JoinResult;
-import org.enso.table.problems.AggregatedProblems;
+import org.enso.table.data.table.join.JoinStrategy;
+import org.enso.table.data.table.join.conditions.JoinCondition;
 import org.enso.table.error.UnexpectedColumnTypeException;
 import org.enso.table.operations.Distinct;
+import org.enso.table.problems.ProblemAggregator;
 import org.enso.table.util.NameDeduplicator;
 import org.graalvm.polyglot.Context;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.BitSet;
-import java.util.Comparator;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 /** A representation of a table structure. */
 public class Table {
 
   private final Column[] columns;
-  private final AggregatedProblems problems;
 
   /**
    * Creates a new table
@@ -48,10 +46,6 @@ public class Table {
    * @param columns the columns contained in this table.
    */
   public Table(Column[] columns) {
-    this(columns, null);
-  }
-
-  public Table(Column[] columns, AggregatedProblems problems) {
     if (columns.length == 0) {
       throw new IllegalArgumentException("A Table must have at least one column.");
     }
@@ -61,7 +55,6 @@ public class Table {
     }
 
     this.columns = columns;
-    this.problems = problems;
   }
 
   private static boolean checkUniqueColumns(Column[] columns) {
@@ -76,19 +69,18 @@ public class Table {
     return true;
   }
 
-  /** @return the number of rows in this table */
+  /**
+   * @return the number of rows in this table
+   */
   public int rowCount() {
     return columns[0].getSize();
   }
 
-  /** @return the columns of this table */
+  /**
+   * @return the columns of this table
+   */
   public Column[] getColumns() {
     return columns;
-  }
-
-  /** @return Attached set of any problems from the Java side */
-  public AggregatedProblems getProblems() {
-    return problems;
   }
 
   /**
@@ -110,11 +102,11 @@ public class Table {
    * Returns a table resulting from selecting only the rows corresponding to true entries in the
    * provided column.
    *
-   * @param maskCol the masking column
+   * @param filterColumn the column for selecting rows
    * @return the result of masking this table with the provided column
    */
-  public Table mask(Column maskCol) {
-    if (!(maskCol.getStorage() instanceof BoolStorage storage)) {
+  public Table filter(Column filterColumn) {
+    if (!(filterColumn.getStorage() instanceof BoolStorage storage)) {
       throw new UnexpectedColumnTypeException("Boolean");
     }
 
@@ -125,9 +117,9 @@ public class Table {
     int cardinality = mask.cardinality();
     Column[] newColumns = new Column[columns.length];
     for (int i = 0; i < columns.length; i++) {
-      newColumns[i] = columns[i].mask(mask, cardinality);
+      newColumns[i] = columns[i].applyFilter(mask, cardinality);
     }
-    return new Table(newColumns, null);
+    return new Table(newColumns);
   }
 
   /**
@@ -155,85 +147,96 @@ public class Table {
     Column[] newCols = new Column[columns.length];
     System.arraycopy(columns, 0, newCols, 0, columns.length);
     newCols[ix] = newCol;
-    return new Table(newCols, null);
+    return new Table(newCols);
   }
 
   private Table addColumn(Column newColumn) {
     Column[] newCols = new Column[columns.length + 1];
     System.arraycopy(columns, 0, newCols, 0, columns.length);
     newCols[columns.length] = newColumn;
-    return new Table(newCols, null);
-  }
-
-  /**
-   * Returns the index of this table.
-   *
-   * @return the index of this table
-   */
-  public Index getIndex() {
-    return new DefaultIndex(rowCount());
+    return new Table(newCols);
   }
 
   /**
    * Creates an index for this table by using values from the specified columns.
    *
-   * @param columns set of columns to use as an Index
+   * @param columns set of columns to use as an index
    * @return a table indexed by the proper column
    */
-  public MultiValueIndex<?> indexFromColumns(Column[] columns) {
-    return MultiValueIndex.makeUnorderedIndex(columns, this.rowCount(), TextFoldingStrategy.unicodeNormalizedFold);
+  public MultiValueIndex<?> indexFromColumns(
+      Column[] columns, ProblemAggregator problemAggregator) {
+    return MultiValueIndex.makeUnorderedIndex(
+        columns, this.rowCount(), TextFoldingStrategy.unicodeNormalizedFold, problemAggregator);
   }
 
   /**
-   * Build a cross-tab table on the given grouping and naming columns, aggregating
-   * across the aggregate columns.
+   * Build a cross-tab table on the given grouping and naming columns, aggregating across the
+   * aggregate columns.
    *
    * @param groupingColumns specifies the rows of the cross-tab table
    * @param nameColumn specifies the values of the columns of the cross-tab table
    * @param aggregates the columns to aggregate across rows and columns
    * @param aggregateNames the names of the aggregate columns
+   * @param problemAggregator an aggregator for problems
    * @return a cross-tab table
    */
   public Table makeCrossTabTable(
-          Column[] groupingColumns,
-          Column nameColumn,
-          Aggregator[] aggregates,
-          String[] aggregateNames) {
-    CrossTabIndex index = new CrossTabIndex(new Column[] {nameColumn}, groupingColumns, this.rowCount());
+      Column[] groupingColumns,
+      Column nameColumn,
+      Aggregator[] aggregates,
+      String[] aggregateNames,
+      ProblemAggregator problemAggregator) {
+    CrossTabIndex index =
+        new CrossTabIndex(
+            new Column[] {nameColumn}, groupingColumns, this.rowCount(), problemAggregator);
     return index.makeCrossTabTable(aggregates, aggregateNames);
   }
 
-    /**
-     * Creates a new table with the rows sorted
-     *
-     * @param columns set of columns to use as an Index
-     * @param objectComparator Object comparator allowing calling back to `compare_to` when needed.
-     * @return a table indexed by the proper column
-     */
+  /**
+   * Creates a new table with the rows sorted
+   *
+   * @param columns set of columns to use as an index
+   * @param objectComparator Object comparator allowing calling back to `compare_to` when needed.
+   * @return a table indexed by the proper column
+   */
   public Table orderBy(Column[] columns, Long[] directions, Comparator<Object> objectComparator) {
     int[] directionInts = Arrays.stream(directions).mapToInt(Long::intValue).toArray();
-    MultiValueIndex<?> index = MultiValueIndex.makeOrderedIndex(columns, this.rowCount(), directionInts, objectComparator);
-    OrderMask mask = new OrderMask(index.makeOrderMap(this.rowCount()));
+    int n = rowCount();
+    Context context = Context.getCurrent();
+    final Storage<?>[] storages =
+        Arrays.stream(columns).map(Column::getStorage).toArray(Storage[]::new);
+    OrderedMultiValueKey[] keys = new OrderedMultiValueKey[n];
+    for (int i = 0; i < n; i++) {
+      keys[i] = new OrderedMultiValueKey(storages, i, directionInts, objectComparator);
+      context.safepoint();
+    }
+    Arrays.sort(keys);
+    OrderMask mask = OrderMask.fromObjects(keys, MultiValueKeyBase::getRowIndex);
     return this.applyMask(mask);
   }
 
   /**
    * Creates a new table keeping only rows with distinct key columns.
    *
-   * @param keyColumns set of columns to use as an Index
+   * @param keyColumns set of columns to use as an index
    * @param textFoldingStrategy a strategy for folding text columns
+   * @param problemAggregator an aggregator for problems
    * @return a table where duplicate rows with the same key are removed
    */
-  public Table distinct(Column[] keyColumns, TextFoldingStrategy textFoldingStrategy) {
-    var problems = new AggregatedProblems();
-    var rowsToKeep = Distinct.buildDistinctRowsMask(rowCount(), keyColumns, textFoldingStrategy, problems);
+  public Table distinct(
+      Column[] keyColumns,
+      TextFoldingStrategy textFoldingStrategy,
+      ProblemAggregator problemAggregator) {
+    var rowsToKeep =
+        Distinct.buildDistinctRowsMask(
+            rowCount(), keyColumns, textFoldingStrategy, problemAggregator);
     int cardinality = rowsToKeep.cardinality();
     Column[] newColumns = new Column[this.columns.length];
     for (int i = 0; i < this.columns.length; i++) {
-      newColumns[i] = this.columns[i].mask(rowsToKeep, cardinality);
+      newColumns[i] = this.columns[i].applyFilter(rowsToKeep, cardinality);
     }
 
-    return new Table(newColumns, problems);
+    return new Table(newColumns);
   }
 
   /**
@@ -248,64 +251,37 @@ public class Table {
             .map(this::getColumnByName)
             .filter(Objects::nonNull)
             .toArray(Column[]::new);
-    return new Table(newCols, null);
+    return new Table(newCols);
   }
 
   /**
-   * Performs a join of this table with the right table, based on the provided
-   * conditions.
-   * The parameters {@code keepLeftUnmatched}, {@code keepMatched} and {@code keepRightUnmatched} control which rows should be returned. They can all be set to {@code false} to emulate an empty result in erroneous conditions.
-   * The parameters {@code includeLeftColumns} and {@code includeRightColumns} control which columns should be included in the result. In most cases they will both be set to true. They allow to easily implement exclusive joins which only keep columns form one table.
-   * {@code rightColumnsToDrop} allows to drop columns from the right table that are redundant when joining on equality of equally named columns.
+   * Performs a join of this table with the right table, based on the provided conditions. The
+   * parameters {@code keepLeftUnmatched}, {@code keepMatched} and {@code keepRightUnmatched}
+   * control which rows should be returned. They can all be set to {@code false} to emulate an empty
+   * result in erroneous conditions. The parameters {@code includeLeftColumns} and {@code
+   * includeRightColumns} control which columns should be included in the result. In most cases they
+   * will both be set to true. They allow to easily implement exclusive joins which only keep
+   * columns form one table. {@code rightColumnsToDrop} allows to drop columns from the right table
+   * that are redundant when joining on equality of equally named columns.
    */
-  public Table join(Table right, List<JoinCondition> conditions, boolean keepLeftUnmatched, boolean keepMatched, boolean keepRightUnmatched, boolean includeLeftColumns, boolean includeRightColumns, List<String> rightColumnsToDrop, String right_prefix) {
-    Context context = Context.getCurrent();
-    NameDeduplicator nameDeduplicator = new NameDeduplicator();
-    if (!keepLeftUnmatched && !keepMatched && !keepRightUnmatched) {
-      throw new IllegalArgumentException("At least one of keepLeftUnmatched, keepMatched or keepRightUnmatched must be true.");
-    }
+  public Table join(
+      Table right,
+      List<JoinCondition> conditions,
+      JoinKind joinKind,
+      boolean includeLeftColumns,
+      boolean includeRightColumns,
+      List<String> rightColumnsToDrop,
+      String right_prefix,
+      ProblemAggregator problemAggregator) {
+    NameDeduplicator nameDeduplicator = NameDeduplicator.createDefault(problemAggregator);
 
-    var strategy = new IndexJoin();
-    JoinResult joinResult = strategy.join(this, right, conditions);
-
-    List<JoinResult> resultsToKeep = new ArrayList<>();
-
-    if (keepMatched) {
-      resultsToKeep.add(joinResult);
-    }
-
-    if (keepLeftUnmatched) {
-      Set<Integer> matchedLeftRows = joinResult.leftMatchedRows();
-      JoinResult.Builder leftUnmatchedBuilder = new JoinResult.Builder();
-      for (int i = 0; i < this.rowCount(); i++) {
-        if (!matchedLeftRows.contains(i)) {
-          leftUnmatchedBuilder.addRow(i, Index.NOT_FOUND);
-        }
-
-        context.safepoint();
-      }
-
-      resultsToKeep.add(leftUnmatchedBuilder.build(AggregatedProblems.of()));
-    }
-
-    if (keepRightUnmatched) {
-      Set<Integer> matchedRightRows = joinResult.rightMatchedRows();
-      JoinResult.Builder rightUnmatchedBuilder = new JoinResult.Builder();
-      for (int i = 0; i < right.rowCount(); i++) {
-        if (!matchedRightRows.contains(i)) {
-          rightUnmatchedBuilder.addRow(Index.NOT_FOUND, i);
-        }
-
-        context.safepoint();
-      }
-
-      resultsToKeep.add(rightUnmatchedBuilder.build(AggregatedProblems.of()));
-    }
+    JoinStrategy strategy = JoinStrategy.createStrategy(conditions, joinKind);
+    JoinResult joinResult = strategy.join(problemAggregator);
 
     List<Column> newColumns = new ArrayList<>();
 
     if (includeLeftColumns) {
-      OrderMask leftMask = OrderMask.concat(resultsToKeep.stream().map(JoinResult::getLeftOrderMask).collect(Collectors.toList()));
+      OrderMask leftMask = joinResult.getLeftOrderMask();
       for (Column column : this.columns) {
         Column newColumn = column.applyMask(leftMask);
         newColumns.add(newColumn);
@@ -313,14 +289,16 @@ public class Table {
     }
 
     if (includeRightColumns) {
-      OrderMask rightMask = OrderMask.concat(resultsToKeep.stream().map(JoinResult::getRightOrderMask).collect(Collectors.toList()));
-      List<String> leftColumnNames = newColumns.stream().map(Column::getName).collect(Collectors.toList());
+      OrderMask rightMask = joinResult.getRightOrderMask();
+      List<String> leftColumnNames = newColumns.stream().map(Column::getName).toList();
 
       HashSet<String> toDrop = new HashSet<>(rightColumnsToDrop);
-      List<Column> rightColumnsToKeep = Arrays.stream(right.getColumns()).filter(col -> !toDrop.contains(col.getName())).collect(Collectors.toList());
-      List<String> rightColumNames = rightColumnsToKeep.stream().map(Column::getName).collect(Collectors.toList());
+      List<Column> rightColumnsToKeep =
+          Arrays.stream(right.getColumns()).filter(col -> !toDrop.contains(col.getName())).toList();
+      List<String> rightColumNames = rightColumnsToKeep.stream().map(Column::getName).toList();
 
-      List<String> newRightColumnNames = nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, right_prefix);
+      List<String> newRightColumnNames =
+          nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, right_prefix);
 
       for (int i = 0; i < rightColumnsToKeep.size(); ++i) {
         Column column = rightColumnsToKeep.get(i);
@@ -330,21 +308,20 @@ public class Table {
       }
     }
 
-    AggregatedProblems joinProblems = joinResult != null ? joinResult.problems() : null;
-    AggregatedProblems aggregatedProblems = AggregatedProblems.merge(AggregatedProblems.of(nameDeduplicator.getProblems()), joinProblems);
-    return new Table(newColumns.toArray(new Column[0]), aggregatedProblems);
+    return new Table(newColumns.toArray(new Column[0]));
   }
 
-  /**
-   * Performs a cross-join of this table with the right table.
-   */
-  public Table crossJoin(Table right, String rightPrefix) {
-    NameDeduplicator nameDeduplicator = new NameDeduplicator();
+  /** Performs a cross-join of this table with the right table. */
+  public Table crossJoin(Table right, String rightPrefix, ProblemAggregator problemAggregator) {
+    NameDeduplicator nameDeduplicator = NameDeduplicator.createDefault(problemAggregator);
 
-    List<String> leftColumnNames = Arrays.stream(this.columns).map(Column::getName).collect(Collectors.toList());
-    List<String> rightColumNames = Arrays.stream(right.columns).map(Column::getName).collect(Collectors.toList());
+    List<String> leftColumnNames =
+        Arrays.stream(this.columns).map(Column::getName).collect(Collectors.toList());
+    List<String> rightColumNames =
+        Arrays.stream(right.columns).map(Column::getName).collect(Collectors.toList());
 
-    List<String> newRightColumnNames = nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, rightPrefix);
+    List<String> newRightColumnNames =
+        nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, rightPrefix);
 
     JoinResult joinResult = CrossJoin.perform(this.rowCount(), right.rowCount());
     OrderMask leftMask = joinResult.getLeftOrderMask();
@@ -358,26 +335,31 @@ public class Table {
       newColumns[i] = this.columns[i].applyMask(leftMask);
     }
     for (int i = 0; i < rightColumnCount; i++) {
-      newColumns[leftColumnCount + i] = right.columns[i].applyMask(rightMask).rename(newRightColumnNames.get(i));
+      newColumns[leftColumnCount + i] =
+          right.columns[i].applyMask(rightMask).rename(newRightColumnNames.get(i));
     }
 
-    AggregatedProblems aggregatedProblems = AggregatedProblems.merge(AggregatedProblems.of(nameDeduplicator.getProblems()), joinResult.problems());
-    return new Table(newColumns, aggregatedProblems);
+    return new Table(newColumns);
   }
 
-  /**
-   * Zips rows of this table with rows of the right table.
-   */
-  public Table zip(Table right, boolean keepUnmatched, String rightPrefix) {
-    NameDeduplicator nameDeduplicator = new NameDeduplicator();
+  /** Zips rows of this table with rows of the right table. */
+  public Table zip(
+      Table right, boolean keepUnmatched, String rightPrefix, ProblemAggregator problemAggregator) {
+    NameDeduplicator nameDeduplicator = NameDeduplicator.createDefault(problemAggregator);
 
     int leftRowCount = this.rowCount();
     int rightRowCount = right.rowCount();
-    int resultRowCount = keepUnmatched ? Math.max(leftRowCount, rightRowCount) : Math.min(leftRowCount, rightRowCount);
+    int resultRowCount =
+        keepUnmatched
+            ? Math.max(leftRowCount, rightRowCount)
+            : Math.min(leftRowCount, rightRowCount);
 
-    List<String> leftColumnNames = Arrays.stream(this.columns).map(Column::getName).collect(Collectors.toList());
-    List<String> rightColumNames = Arrays.stream(right.columns).map(Column::getName).collect(Collectors.toList());
-    List<String> newRightColumnNames = nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, rightPrefix);
+    List<String> leftColumnNames =
+        Arrays.stream(this.columns).map(Column::getName).collect(Collectors.toList());
+    List<String> rightColumNames =
+        Arrays.stream(right.columns).map(Column::getName).collect(Collectors.toList());
+    List<String> newRightColumnNames =
+        nameDeduplicator.combineWithPrefix(leftColumnNames, rightColumNames, rightPrefix);
 
     Column[] newColumns = new Column[this.columns.length + right.columns.length];
 
@@ -387,10 +369,11 @@ public class Table {
       newColumns[i] = this.columns[i].resize(resultRowCount);
     }
     for (int i = 0; i < rightColumnCount; i++) {
-      newColumns[leftColumnCount + i] = right.columns[i].resize(resultRowCount).rename(newRightColumnNames.get(i));
+      newColumns[leftColumnCount + i] =
+          right.columns[i].resize(resultRowCount).rename(newRightColumnNames.get(i));
     }
 
-    return new Table(newColumns, AggregatedProblems.of(nameDeduplicator.getProblems()));
+    return new Table(newColumns);
   }
 
   /**
@@ -408,19 +391,8 @@ public class Table {
                   return new Column(column.getName(), newStorage);
                 })
             .toArray(Column[]::new);
-    return new Table(newColumns, null);
+    return new Table(newColumns);
   }
-
-  private static class NamedBuilder {
-    private final String name;
-    private final InferredBuilder builder;
-
-    private NamedBuilder(String name, int size) {
-      this.name = name;
-      this.builder = new InferredBuilder(size);
-    }
-  }
-
 
   /**
    * Transpose tables.
@@ -431,7 +403,12 @@ public class Table {
    * @param value_field the name of the Value field in the output.
    * @return a table result from transposing the specified columns.
    */
-  public static Table transpose(Column[] id_columns, Column[] to_transpose, String name_field, String value_field) {
+  public static Table transpose(
+      Column[] id_columns,
+      Column[] to_transpose,
+      String name_field,
+      String value_field,
+      ProblemAggregator problemAggregator) {
     if (to_transpose.length == 0) {
       // Nothing to transpose, add two null columns to the existing set.
       Column[] newColumns = new Column[id_columns.length + 2];
@@ -452,9 +429,14 @@ public class Table {
 
     // Create Storage
     Builder[] storage = new Builder[id_columns.length + 2];
-    IntStream.range(0, id_columns.length).forEach(i -> storage[i] = Builder.getForType(id_columns[i].getStorage().getType(), new_count));
+    IntStream.range(0, id_columns.length)
+        .forEach(
+            i ->
+                storage[i] =
+                    Builder.getForType(
+                        id_columns[i].getStorage().getType(), new_count, problemAggregator));
     storage[id_columns.length] = new StringBuilder(new_count, TextType.VARIABLE_LENGTH);
-    storage[id_columns.length + 1] = new InferredBuilder(new_count);
+    storage[id_columns.length + 1] = new InferredBuilder(new_count, problemAggregator);
 
     // Load Data
     Context context = Context.getCurrent();
@@ -473,78 +455,33 @@ public class Table {
 
     // Create Table
     Column[] new_columns = new Column[id_columns.length + 2];
-    IntStream.range(0, id_columns.length).forEach(i -> new_columns[i] = new Column(id_columns[i].getName(), storage[i].seal()));
+    IntStream.range(0, id_columns.length)
+        .forEach(i -> new_columns[i] = new Column(id_columns[i].getName(), storage[i].seal()));
     new_columns[id_columns.length] = new Column(name_field, storage[id_columns.length].seal());
-    new_columns[id_columns.length + 1] = new Column(value_field, storage[id_columns.length + 1].seal());
+    new_columns[id_columns.length + 1] =
+        new Column(value_field, storage[id_columns.length + 1].seal());
     return new Table(new_columns);
   }
 
   /**
-   * Concatenates tables. Any column that is present in one table, but missing in another, will be
-   * {@code null}-padded in the positions corresponding to the missing column.
-   *
-   * @param tables the (non-empty) list of tables to concatenate.
-   * @return a table result from concatenating both tables
+   * @return a copy of the Table containing a slice of the original data
    */
-  public static Table concat(List<Table> tables) {
-    Context context = Context.getCurrent();
-    int resultSize = tables.stream().mapToInt(Table::rowCount).sum();
-
-    List<NamedBuilder> builders = new ArrayList<>();
-    int completedRows = 0;
-    for (var table : tables) {
-      for (var column : table.getColumns()) {
-        var matchingBuilder =
-            builders.stream().filter(bldr -> Text_Utils.equals(bldr.name, column.getName())).findFirst();
-        NamedBuilder builder;
-        if (matchingBuilder.isPresent()) {
-          builder = matchingBuilder.get();
-        } else {
-          builder = new NamedBuilder(column.getName(), resultSize);
-          builders.add(builder);
-          builder.builder.appendNulls(completedRows);
-        }
-        var storage = column.getStorage();
-        for (int i = 0; i < storage.size(); i++) {
-          builder.builder.appendNoGrow(storage.getItemBoxed(i));
-          context.safepoint();
-        }
-
-        context.safepoint();
-      }
-      for (var builder : builders) {
-        var columnExists =
-            Arrays.stream(table.getColumns()).anyMatch(col -> Text_Utils.equals(col.getName(), builder.name));
-        if (!columnExists) {
-          builder.builder.appendNulls(table.rowCount());
-        }
-
-        context.safepoint();
-      }
-      completedRows += table.rowCount();
-    }
-
-    Column[] newColumns =
-        builders.stream()
-            .map(builder -> new Column(builder.name, builder.builder.seal()))
-            .toArray(Column[]::new);
-    return new Table(newColumns, null);
-  }
-  /** @return a copy of the Table containing a slice of the original data */
   public Table slice(int offset, int limit) {
     Column[] newColumns = new Column[columns.length];
     for (int i = 0; i < columns.length; i++) {
       newColumns[i] = columns[i].slice(offset, limit);
     }
-    return new Table(newColumns, null);
+    return new Table(newColumns);
   }
 
-  /** @return a copy of the Table consisting of slices of the original data */
+  /**
+   * @return a copy of the Table consisting of slices of the original data
+   */
   public Table slice(List<SliceRange> ranges) {
     Column[] newColumns = new Column[columns.length];
     for (int i = 0; i < columns.length; i++) {
       newColumns[i] = columns[i].slice(ranges);
     }
-    return new Table(newColumns, null);
+    return new Table(newColumns);
   }
 }
